# openclaw-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  windows-desktop-package.yml
deploy/: README.md
deploy/desktop-runtime/: docker-compose.agentcore-runtime.example.yml
deploy/launchd/: com.agentcore.publish-queue-worker.plist  com.openclaw.publish-queue-worker.plist
deploy/pm2/: ecosystem.config.cjs
deploy/systemd/: agentcore-publish-queue-trigger.service  agentcore-publish-queue-worker.service  agentcore-publish-queue-worker.timer  openclaw-publish-queue-trigger.service  (+2 more)
docs/: AGENT_EXECUTION_ENTERPRISE_UPGRADE.zh-CN.md  COLD_START_VALIDATION.zh-CN.md  COMMAND_LINE_INSTALL.zh-CN.md  CONFIGURATION.md  CONNECTORS.md  CONNECTOR_RECIPES.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.zh-CN.md  EARLY_ACCESS_RELEASE.zh-CN.md  GETTING_STARTED.md  HERO_WORKFLOW.md  LAUNCH_COPY_v1.0.0.zh-CN.md  LAUNCH_COPY_v1.1.0.zh-CN.md  MACOS_SIGNING_AND_NOTARIZATION.zh-CN.md  MACOS_UNSIGNED_INSTALL.zh-CN.md  NEXT_STEPS.md  OPEN_SOURCE_CHECKLIST.md  PRIVACY.md  PUBLIC_RELEASE.md  RELEASE_CHECKLIST_v1.1.0.zh-CN.md  ROADMAP.md  SOLUTION_OS.md  USER_GUIDE.zh-CN.md  USE_CASES.md  WINDOWS_DESKTOP_TESTING.md
lobster-sidecar/: README.md  lobster_bridge.py  lobster_engine.spec  main.py  requirements.txt  storage.py
scripts/: publish-queue-worker.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  (+1 more)
(+152 files in other folders)
