[package]
name = "agentcore-os-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
